--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Cat Chat</title>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="app.css">
 </head>
 <body>
 	<h1>hello world</h1>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+	<script src="app.js"></script>
 </body>
 </html>
