add basic format

--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 	<link rel="stylesheet" href="app.css">
 </head>
 <body>
-	<h1>hello world</h1>
+	<div class="container app-container">
+		<h1>#LimaJS cat-chat</h1>
+
+		<div class="chat-room-holder">
+			<div class="messages-holder"></div>
+			<div class="new-message-holder"></div>
+		</div>
+	</div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
 	<script src="app.js"></script>
