--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 		<h1>#LimaJS cat-chat</h1>
 
 		<div class="chat-room-holder">
-			<div class="messages-holder"></div>
+			<div class="messages-holder js-messages-holder"></div>
 			<div class="new-message-holder"></div>
 		</div>
 	</div>
 
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+	<script src="//cdn.jsdelivr.net/pouchdb/3.4.0/pouchdb.min.js"></script>
 	<script src="app.js"></script>
 </body>
 </html>
