add submit message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="nick-holder">
 				<form class="nick-form">
 					<div class="form-group">
-						<input type="text" class="form-control" id="nick" placeholder="Nickname">
+						<input type="text" class="form-control js-nickname" id="nickname" placeholder="Nickname">
 					</div>
 				</form>
 			</div>
@@ -22,10 +22,11 @@
 			<div class="new-message-holder">
 				<form class="new-message-form">
 					<div class="form-group">
-						<input type="text" class="form-control" id="message" placeholder="Mensaje">
+						<input type="text" class="form-control js-message" id="message" placeholder="Mensaje">
 					</div>
-					<button type="button" class="btn btn-warning">Enviar</button>
+					<button type="button" class="js-submit-btn btn btn-warning">Enviar</button>
 				</form>
+				<p class="status-message js-status-message"></p>
 			</div>
 		</div>
 	</div>
